# sddc_connector

./: CMakeLists.txt
src/: CMakeLists.txt  sddc_connector.cpp  sddc_connector.hpp  sdr_cuda.cu  sdr_cuda.hpp
